[gd_scene load_steps=2 format=3 uid="uid://removeadsdialog"]

[ext_resource type="Script" path="res://shared/RemoveAdsDialog.gd" id="1"]

[node name="RemoveAdsDialog" type="CanvasLayer"]
process_mode = 3
layer = 200
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="DialogPanel" type="Panel" parent="Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Overlay/DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Overlay/DialogPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Remove All Ads"
horizontal_alignment = 1

[node name="PriceLabel" type="Label" parent="Overlay/DialogPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "£1.00"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Overlay/DialogPanel/VBox"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="Overlay/DialogPanel/VBox"]
layout_mode = 2
text = "Remove ads for £1.00
No banner ads on game screens
No interruptions during gameplay
One-time purchase for all games"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="Overlay/DialogPanel/VBox"]
layout_mode = 2

[node name="FeaturesLabel" type="Label" parent="Overlay/DialogPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "✓ Ad-free gameplay across all 3 games
✓ Uninterrupted experience
✓ One-time £1.00 purchase"
autowrap_mode = 3

[node name="Spacer" type="Control" parent="Overlay/DialogPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PurchaseButton" type="Button" parent="Overlay/DialogPanel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Purchase for £1.00"

[node name="CancelButton" type="Button" parent="Overlay/DialogPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="Overlay/DialogPanel/VBox/PurchaseButton" to="." method="_on_purchase_pressed"]
[connection signal="pressed" from="Overlay/DialogPanel/VBox/CancelButton" to="." method="_on_cancel_pressed"]
